Made table and row borders the same for print and HTML on request from the RPC, and increased the contrast between borders and odd row background colour slightly.  Fixes issue #494.  - Legacy-Id: 3597

--- a/cli/xml2rfc/data/xml2rfc.css
+++ b/cli/xml2rfc/data/xml2rfc.css
@@ -1028,3 +1028,14 @@ ol.type-a { list-style-type: lower-alpha; }
 ol.type-A { list-style-type: upper-alpha; }
 ol.type-i { list-style-type: lower-roman; }
 ol.type-I { list-style-type: lower-roman; }
+/* Apply the print table and row borders in general, on request from the RPC,
+and increase the contrast between border and odd line background sligthtly */
+table {
+  border: 1px solid #ddd;
+}
+td {
+  border-top: 1px solid #ddd;
+}
+tr:nth-child(2n+1) > td {
+  background-color: #f8f8f8;
+}
